// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="c-fu21rt soui-tag-tag c6bu3q9 soui-tag-info c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Info
      </span>
    </div>
  </div>
  <div
    class="c-fu21rt soui-tag-tag c-t9bld6 soui-tag-danger c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Danger
      </span>
    </div>
  </div>
  <div
    class="c-fu21rt soui-tag-tag cb6w7wp soui-tag-warning c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Warning
      </span>
    </div>
  </div>
  <div
    class="c-fu21rt soui-tag-tag cwqvka8 soui-tag-success c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag c-e1q606 soui-tag-tangerine c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6ay42e soui-tag-magenta c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-n9phzl soui-tag-purple c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-qp4i0r soui-tag-indigo c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bqhue soui-tag-cyan c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bx47d soui-tag-neon c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-gux65c soui-tag-lemon c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-h06rkt soui-tag-brown c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag c-e1q606 soui-tag-tangerine c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6ay42e soui-tag-magenta c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-n9phzl soui-tag-purple c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-qp4i0r soui-tag-indigo c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bqhue soui-tag-cyan c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bx47d soui-tag-neon c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-gux65c soui-tag-lemon c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-h06rkt soui-tag-brown c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag c-e1q606 soui-tag-tangerine c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6ay42e soui-tag-magenta c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-n9phzl soui-tag-purple c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-qp4i0r soui-tag-indigo c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bqhue soui-tag-cyan c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bx47d soui-tag-neon c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-gux65c soui-tag-lemon c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-h06rkt soui-tag-brown c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag c-e1q606 soui-tag-tangerine c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6ay42e soui-tag-magenta c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-n9phzl soui-tag-purple c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-qp4i0r soui-tag-indigo c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bqhue soui-tag-cyan c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bx47d soui-tag-neon c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-gux65c soui-tag-lemon c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-h06rkt soui-tag-brown c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bu3q9 soui-tag-info c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-t9bld6 soui-tag-danger c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cb6w7wp soui-tag-warning c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cwqvka8 soui-tag-success c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bu3q9 soui-tag-info c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-t9bld6 soui-tag-danger c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cb6w7wp soui-tag-warning c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cwqvka8 soui-tag-success c6bs37a soui-tag-fill"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bu3q9 soui-tag-info c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-t9bld6 soui-tag-danger c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cb6w7wp soui-tag-warning c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cwqvka8 soui-tag-success c-pp78sx soui-tag-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c6bu3q9 soui-tag-info c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-t9bld6 soui-tag-danger c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cb6w7wp soui-tag-warning c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag cwqvka8 soui-tag-success c-7fa7hn soui-tag-bright-outline"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag c-gqxr2k soui-tag-small ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-guzml4 soui-tag-large ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="c-fu21rt soui-tag-tag c-gqxr2k soui-tag-small ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Small
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Default
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag c-guzml4 soui-tag-large ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Large
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Tag 1
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Tag 2
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright c-bz22xd soui-tag-disabled"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          class="c-jobm1e soui-tag-container"
        >
          <span>
            Tag 3
          </span>
        </div>
      </div>
      <div
        class="c-kv3sjm soui-tag-close-icon"
      >
        <span
          class="c8p9rlh soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-pp78sx soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <div
        class="cizcphc soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <div
        class="c-jobm1e soui-tag-container"
      >
        <span>
          Abc
        </span>
      </div>
    </div>
    <div
      class="c-kv3sjm soui-tag-close-icon"
    >
      <span
        class="c8p9rlh soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="c-fu21rt soui-tag-tag ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="c-fu21rt soui-tag-tag cfiau56 soui-tag-rounded ci55y26 soui-tag-default c-ty5ixf soui-tag-bright"
  >
    <div
      class="cizcphc soui-tag-wrapper"
    >
      <span>
        Rounded
      </span>
    </div>
  </div>
</div>
`;
